; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/routed/extr_trace.c_trace_flush.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/routed/extr_trace.c_trace_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ftrace = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [16 x i8] c"tracing off: %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @trace_flush() #0 {
  %1 = load i32*, i32** @ftrace, align 8
  %2 = icmp ne i32* %1, null
  br i1 %2, label %3, label %15

3:                                                ; preds = %0
  %4 = load i32*, i32** @ftrace, align 8
  %5 = call i32 @fflush(i32* %4)
  %6 = load i32*, i32** @ftrace, align 8
  %7 = call i64 @ferror(i32* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %3
  %10 = load i32*, i32** @ftrace, align 8
  %11 = call i64 @ferror(i32* %10)
  %12 = call i32 @strerror(i64 %11)
  %13 = call i32 @trace_off(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %12)
  br label %14

14:                                               ; preds = %9, %3
  br label %15

15:                                               ; preds = %14, %0
  ret void
}

declare dso_local i32 @fflush(i32*) #1

declare dso_local i64 @ferror(i32*) #1

declare dso_local i32 @trace_off(i8*, i32) #1

declare dso_local i32 @strerror(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
